--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,7 @@ FROM gcr.io/tensorflow/tensorflow:latest-gpu
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     vim \
-    python-tk && \
+    python-tk \
+    ffmpeg && \
 
-    pip install tqdm
+    pip install tqdm pytube
